Configured the java mail setup and implemented methods to send simple email, with attachments, html text using dynamic values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=MailSender
+#SMTP Configuration
+email.smtp.host=smtp.gmail.com
+email.smtp.port=587
+email.smtp.auth=true
+email.smtp.starttls=true
